# embattled

./: .gitignore  CMakeLists.txt  README.md  arena.data  arena.html  arena.js  arena.wasm  eal.md  guide.md  index.html  instruction-set.md  notes-from-trial.txt  robot-design.md
arena/: CMakeLists.txt  clay.c  example.easm  main.c  spin.easm  spin_attack.easm  wander_scan.easm
arena/include/arena/: physics.h  raycast.h  robot.h  simulation.h  timer.h  vector.h  worker.h
arena/js-parser/: easm.grammar  package-lock.json  package.json  webpack.config.cjs
arena/js-parser/src/: index.js
arena/resources/shaders/: hblur.glsl  vblur.glsl
arena/resources/shaders/glsl100/: hblur.glsl  vblur.glsl
arena/src/: physics.c  raycast.c  robot.c  simulation.c  sleep.c  timer.c  vector.c  worker.c
arena/tests/: CMakeLists.txt
arena/web/: easm.js  easm.terms.js  post.js  shell.html
assembler/: CMakeLists.txt
assembler/include/assembler/: assemble.h  assembly.h  binary.h  mnemonic.h  operand.h
assembler/src/: assemble.c  assembly.c  binary.c  mnemonic.c
assembler/tests/: CMakeLists.txt  assemble_tests.c  assemble_tests_Runner.c
cmake/: EnableWarnings.cmake  FetchClay.cmake  FetchRaylib.cmake  FetchUnity.cmake
demo/: CMakeLists.txt  example.easm  fibonacci.easm  main.c  tree_dfs.easm
examples/: nop.easm  spin.easm  wander_scan.easm
include/: instruction.h  parse.h  process.h
parser/: CMakeLists.txt
parser/include/parser/: assembly.h  parse.h  utilities.h
parser/src/: assembly.c  parse.c  text_utils.c  text_utils.h  utilities.c
parser/tests/: CMakeLists.txt  parse_tests.c  parse_tests_Runner.c  text_assertions.c  text_assertions.h
processor/: CMakeLists.txt
processor/include/processor/: immediate.h  instruction.h  layout.h  opcode.h  operand.h  process.h  register.h
processor/src/: instruction.c  opcode.c  process.c  register.c
processor/tests/: CMakeLists.txt  custom_assertions.c  custom_assertions.h  instruction_tests.c  instruction_tests_Runner.c  process_tests.c  process_tests_Runner.c  test_main.c
src/: instruction.c  main.c  parse.c  process.c
test_utilities/: CMakeLists.txt  README.md
test_utilities/src/: text_assertions.c
tests/: CMakeLists.txt  main.c
utilities/: CMakeLists.txt  README.md
utilities/include/utilities/: file.h  sleep.h  text.h
utilities/src/: file.c  sleep.c  text.c
utilities/tests/: CMakeLists.txt  text_tests.c  text_tests_Runner.c
